@@ -253,13 +253,13 @@ void ActionDialog::copy(const QString &srcUdi, const QString &dstUdi, const QLis
         quint32 size=s.size;
         if (0==size) {
             if (srcUdi.isEmpty()) {
-                 size=QFileInfo(MPDConnection::self()->getDetails().dir+s.file).size();
-            } else if (QFile::exists(s.file)) { // FS device...
-                size=QFileInfo(s.file).size();
+                size=QFileInfo(MPDConnection::self()->getDetails().dir+s.file).size();
+            } else if (QFile::exists(dev->path()+s.file)) { // FS device...
+                size=QFileInfo(dev->path()+s.file).size();
             }
         }
-        if (s.size>0) {
-            spaceRequired+=s.size;
+        if (size>0) {
+            spaceRequired+=size;
         }
         if (!haveVariousArtists && s.isVariousArtists()) {
             haveVariousArtists=true;
